--- a/generate-index.service
+++ b/generate-index.service
@@ -2,8 +2,10 @@
 Description=Runs the generate_index file
 
 [Service]
-Type=simple
+Type=oneshot
 ExecStart=/var/lib/webgen/bin/generate_index
+User=webgen
+Group-webgen
 
 [Install]
 WantedBy=multi-user.target
