--- a/server-block.conf
+++ b/server-block.conf
@@ -3,6 +3,8 @@ server {
   listen [::]:80;
   server_name 209.38.145.77;
   root /var/lib/webgen/HTML;
+  index index.html;
   location / {
-    index index.html;
+    try_files $uri $uri/ =404;
   }
+}
